--- a/pw1-hxh/index.html
+++ b/pw1-hxh/index.html
@@ -143,7 +143,7 @@
 
                 <h3>Nen</h3>
                     <p>
-                        Ele brinca, por exemplo, que quer se tornar um Hunter para ficar rico, quando, na verdade, seu objetivo é poder custear sua faculdade de Medicina para ajudar outras pessoas.
+                        O Nen de Leorio é do tipo Emissão, o que faz com que ele seja capaz de separar um pouco de sua aura de seu corpo e arremessá-la na direção do oponente em forma de uma espécie de golpe de energia.
                     </p>
 
                     <p>
